# pycamilladsp

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: tests.yml
camilladsp/: __init__.py  camilladsp.py  camillaws.py  commandgroup.py  config.py  datastructures.py  exceptions.py  filter_eval.py  general.py  levels.py  plot_filters.py  plot_pipeline.py  plotcamillaconf.py  ratemonitor.py  settings.py  show_config.py  status.py  versions.py  volume.py
client/: index.html
config/: index.html
docs/: client.md  config.md  enums.md  errors.md  general.md  index.md  install.md  levels.md  mute.md  rate.md  settings.md  status.md  versions.md  volume.md
enums/: index.html
errors/: index.html
examples/get_config/: get_config.py
examples/playwav/: analyze_wav.py  play_wav.py
examples/read_rms/: read_rms.py
examples/set_volume/: set_volume.py
general/: index.html
install/: index.html
levels/: index.html
mute/: index.html
rate/: index.html
settings/: index.html
status/: index.html
tests/: test_camillaws.py  test_filtereval.py
versions/: index.html
volume/: index.html
