[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["camilladsp"]

[project]
name = "camilladsp"
authors = [
    {name = "Henrik Enquist", email = "henrik.enquist@gmail.com"},
]
description = "Python library for communicating with CamillaDSP"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML >= 6.0",
    "websocket_client >= 1.6"
]
dynamic = ["version"]
license = {file = "LICENSE.txt"}

[tool.setuptools.dynamic]
version = {attr = "camilladsp.versions.VERSION"}

[project.optional-dependencies]
dev = ["black >= 24.0.0", "pylint >= 2.17", "mypy >= 1.0", "pytest >= 7.0"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

